friendlier home page

--- a/mycelium/apps/hi/templates/hi/hi.html
+++ b/mycelium/apps/hi/templates/hi/hi.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="hi_text">Hi!</div>
+<div class="welcome_text">Welcome to Mycelium.</div>
 {% endblock %}
