--- a/media/css/main.css
+++ b/media/css/main.css
@@ -1,3 +1,4 @@
+html {-webkit-font-smoothing: antialiased;}
 @font-face {
 	font-family: 'HattoriHanzoLight';
 	src: url('../fonts/Hattori_Hanzo-webfont.eot');
@@ -108,15 +109,77 @@
 	font-weight: normal;
 	font-style: normal;
 }
+@font-face {
+	font-family: 'ExpresswayRegular';
+	src: url('../fonts/expressway_rg-webfont.eot');
+	src: local(''), url('../fonts/expressway_rg-webfont.woff') format('woff'), url('../fonts/expressway_rg-webfont.ttf') format('truetype'), url('../fonts/expressway_rg-webfont.svg#webfont') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+
+@font-face {
+	font-family: 'FontinSansRegular';
+	src: url('../fonts/fontin_sans_r_45b-webfont.eot');
+	src: local(''), url('../fonts/fontin_sans_r_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_r_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_r_45b-webfont.svg#webfontCPGluQN9') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'FontinSansBold';
+	src: url('../fonts/fontin_sans_b_45b-webfont.eot');
+	src: local(''), url('../fonts/fontin_sans_b_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_b_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_b_45b-webfont.svg#webfontKVT2dh5P') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'FontinSansBoldItalic';
+	src: url('../fonts/fontin_sans_bi_45b-webfont.eot');
+	src: local(''), url('../fonts/fontin_sans_bi_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_bi_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_bi_45b-webfont.svg#webfontMJUB6xX4') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'FontinSansItalic';
+	src: url('../fonts/fontin_sans_i_45b-webfont.eot');
+	src: local(''), url('../fonts/fontin_sans_i_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_i_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_i_45b-webfont.svg#webfont3geGagNS') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'FontinSansSmallCaps';
+	src: url('../fonts/fontin_sans_sc_45b-webfont.eot');
+	src: local(''), url('../fonts/fontin_sans_sc_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_sc_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_sc_45b-webfont.svg#webfontaXJUObFg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+
 
 
 
 
 
 .hi_text {
-	padding: 60px 0px;
+	padding: 60px 0px 60px 0px;
 	width: 100%;
 	text-align: center;
 	font-size: 300px;
-	font-family: HattoriHanzoLight;
+	font-family: 'ExpresswayRegular', Arial, sans-serif;
+	color: #222;
+	text-shadow:		 2px 2px 2px #888;
+	-moz-text-shadow:    2px 2px 2px #888;
+	-webkit-text-shadow: 2px 2px 2px #888;	
+}
+.welcome_text {
+	padding: 0px 0px;
+	width: 100%;
+	text-align: center;
+	font-size: 100px;
+	font-family: 'ExpresswayRegular', Arial, sans-serif;
+	color: #999;
 }
