adding mysql support

--- a/mycelium/apps/hi/templates/hi/hi.html
+++ b/mycelium/apps/hi/templates/hi/hi.html
@@ -15,7 +15,7 @@ $(function(){
 	$("#question").animate({opacity:0},0).show();
 	setTimeout(fade_in_question, 4000)
 	setTimeout(function(){	$("#hi_content").mousemove(fade_in_question)}, 400)
-	$('#id_email').toggleVal({populateFrom:"custom", text:"interested@great-nonprofit.com"}).addClass("prefilled");
+	$('#id_email').toggleVal({populateFrom:"custom", text:"interested@great-nonprofit.org"}).addClass("prefilled");
 	{% endif %}
 
 });
