--- a/media/css/main.css
+++ b/media/css/main.css
@@ -234,7 +234,11 @@ input {
 #id_email {
 	width: 400px;
 	background: #FEFEFE;
-	border: #6386AE 1px solid;
+	border: #6D8CAD 1px solid;
+}
+#id_email.hovered {
+	border: #00489C 1px solid;
+	background: #FFF;
 }
 #id_email.prefilled.tv-focused, #id_email.prefilled.tv-changed {
 	color: #222;
@@ -242,6 +246,10 @@ input {
 #id_email.prefilled {
 	color: #AAA;
 }
+#id_email.hovered.prefilled {
+	color: #666;
+}
+
 #id_submit {
 	border: 0px solid #EEE;
 	background-color: #EEE;
@@ -270,8 +278,8 @@ input {
 	-webkit-text-shadow: 1px 1px -1px #0355aa;
 	cursor: pointer;
 }
-#id_submit:hover {
-	background-color: #00419B;
+#id_submit.hovered {
+	background-color: #0040C2;
 	color: #FFF;
 /*	background: url("../images/submitback-hover.gif");*/
 }
