changed to goodcloud

--- a/mycelium/apps/hi/templates/hi/hi.html
+++ b/mycelium/apps/hi/templates/hi/hi.html
@@ -44,8 +44,8 @@ function fade_in_question(){
 {% block content %}
 <div id="hi_content">
 <div class="hi_text">Hi!</div>
-<div class="welcome_text">Welcome to Mycelium.</div>
-<div id="question" style="display: none"><a href="#answer">What's Mycelium?</a></div>
+<div class="welcome_text">Welcome to GoodCloud.</div>
+<div id="question" style="display: none"><a href="#answer">What's GoodCloud?</a></div>
 <div id="answer">
 	<p class="and_a_half">We're a small company.</p>
 	<p>We make great software <br/>
