--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>{% block title %}DigitalMycelium{% block extra_title %}{% endblock %}{% endblock %}</title>
+	<title>{% block title %}GoodCloud{% block extra_title %}{% endblock %}{% endblock %}</title>
 
 	<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.js"> </script>
 	<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery-ui.js"> </script>
