search page mock-up is done

--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -1,7 +1,7 @@
-{% extends "mycelium_base.html" %}
+{% extends "people/base.html" %}
 {% block head %}{{block.super}}
 {% endblock %}
-{% block content %}
-Person
+{% block page_content %}
+{{person}}
 
 {% endblock %}
