--- a/media/css/main.css
+++ b/media/css/main.css
@@ -170,6 +170,11 @@ body {
 	margin: 0px;
 	font-family: 'ExpresswayRegular', Arial, sans-serif;
 }
+table {
+	border-collapse: collapse;
+	padding: 0px;
+	margin: 0px;
+}
 
 #hi_content {
 	display: block;
@@ -287,4 +292,84 @@ input {
 	padding: 20px;
 	color: #004486;	
 	font-size: 30px;
+}
+
+#logo {
+	display: block;
+	position: absolute;	
+	top: 0px;
+	left: 10px;
+	font-size: 45px;
+	color: #FFF;
+	text-shadow:		 1px 1px 1px #06381C;
+	-moz-text-shadow:    1px 1px 1px #06381C;
+	-webkit-text-shadow: 1px 1px 1px #06381C;
+}
+#logo small {
+	font-size: 36px;
+}
+#main_nav {
+	display: block;
+	position: absolute;	
+	top: 0px;
+	right: 4%;
+	width: auto;
+	height: 40px;
+	background: #EEE;
+	border-bottom-left-radius: 4px;
+	-moz-border-radius-bottomleft: 4px;
+	-webkit-border-bottom-left-radius: 4px;	
+	border-bottom-right-radius: 4px;
+	-moz-border-radius-bottomright: 4px;
+	-webkit-border-bottom-right-radius: 4px;	
+
+    overflow: hidden;
+}
+#main_nav a {
+	text-decoration: none;
+	border-right: 1px solid #DDD;
+	border-bottom: 4px solid #BBB;
+	border-top-width: 0px;
+	font-size: 23px;
+	padding: 6px 20px 4px 20px;
+	margin: 0px;
+	display: block;
+	float: left;
+
+}
+#main_nav a.current {
+	border-bottom: 4px solid #3E9CFD;
+}
+
+#page {
+	display: block;
+	margin: 80px auto;
+	width: 92%;
+	
+	background: #FFF;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	
+    -moz-box-sizing: border-box;
+    -opera-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -khtml-box-sizing: border-box;
+    box-sizing: border-box;
+	border: 1px solid #AAA;
+	padding: 4px;
+	color: #333;
+}
+
+input.prefilled.tv-focused, input.prefilled.tv-changed {
+	color: #222;
+}
+input.prefilled {
+	color: #AAA;
+}
+input.hovered.prefilled {
+	color: #666;
+}
+input.prefilled.tv-focused {
+	border: 2px solid #0355aa;
 }
