--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -8,14 +8,14 @@
 {% block content %}
 	{% block nav %}
 	<div id="logo">
-		GoodCloud
+		GoodCloud	
 	</div>
 	<div id="main_nav">{% spaceless %}
 		<a href="{% url people:search %}" class="current">People</a>
-		<a href="#">Multiply</a>
-		<a href="#">Yardstick</a>
-		<a href="#">Soapbox</a>
-		<a href="#">Shindig</a>
+		<a href="#">Fund{# Multiply #}</a>
+		<a href="#">Measure{# Yardstick #}</a>
+		<a href="#">Communicate{# Soapbox #}</a>
+		<a href="#">Events{# Shindig #}</a>
 	{% endspaceless %}</div>
 	{% endblock %}
 	
