--- a/media/css/main.css
+++ b/media/css/main.css
@@ -304,6 +304,12 @@ input {
 	text-shadow:		 1px 1px 1px #06381C;
 	-moz-text-shadow:    1px 1px 1px #06381C;
 	-webkit-text-shadow: 1px 1px 1px #06381C;
+	height: 70px;
+	
+	padding-left: 90px;
+	background: url("../images/goodcloud-logo-40.png");
+	background-position: 5px 5px;
+	background-repeat: no-repeat;
 }
 #logo small {
 	font-size: 36px;
