--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -8,7 +8,7 @@
 {% block content %}
 	{% block nav %}
 	<div id="logo">
-		GoodCloud	
+		Organization Name	
 	</div>
 	<div id="main_nav">{% spaceless %}
 		<a href="{% url people:search %}" class="current">People</a>
