--- a/mycelium/apps/people/templates/people/_search_results.html
+++ b/mycelium/apps/people/templates/people/_search_results.html
@@ -17,5 +17,7 @@
 	</td></tr>
 </table>
 {% else %}
-No people found.
+<div class="no_people_found">
+	No people found for search "{{q}}".
+</div>
 {% endif %}
