--- a/mycelium/apps/people/templates/people/_search_results.html
+++ b/mycelium/apps/people/templates/people/_search_results.html
@@ -2,7 +2,7 @@
 {% if people %}
 {% autopaginate people 100 %}
 <table class="results_table">
-	<tr class="result_row person_row header">
+	<tr class="person_row header">
 		<th class="name">Name</th>
 		<th class="phone_number">Phone Number</th>
 	</tr>
