--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -2,6 +2,9 @@
 {% block head %}{{block.super}}
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.scrollTo-min.js"> </script>
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.toggleval.js"> </script>
+<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.hotkeys-0.7.9.min.js"> </script>
+<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.ajax.queue.js"> </script>
+
 <script type="text/javascript" charset="utf-8">
 </script>
 {% endblock %}
