--- a/media/css/people.css
+++ b/media/css/people.css
@@ -14,6 +14,7 @@ body {
 	background-image: url("../images/search-24.png");
 	background-position: 4px 6px;
 	background-repeat: no-repeat;
+	outline-style:none;
 }
 #id_search_query:focus {
 	border: 2px solid #3E9CFD;
