--- a/mycelium/apps/people/templates/people/_search_results.html
+++ b/mycelium/apps/people/templates/people/_search_results.html
@@ -8,8 +8,8 @@
 	</tr>
 {% for p in people %}
 	<tr class="result_row person_row">
-		<td class="name"><a href="{% url people:person p.pk %}">{{p.full_name}}</a></td>
-		<td class="phone_number">{{p.primary_phone_number}}</td>
+		<td class="name"><a href="{% url people:person p.pk %}" class="highlightable">{{p.full_name}}</a></td>
+		<td class="phone_number highlightable">{{p.primary_phone_number}}</td>
 	</tr>
 {% endfor %}
 	<tr><td colspan="2">
