--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -23,13 +23,37 @@ function update_search() {
 	  mode: 'abort',
 	  success: function(json) {
 		$(".search_results").html(json.html);
-		$(".search_results .name a").each(function(){
-			var rx = new RegExp(q, "gi")
-			$(this).html($(this).text().replace(rx,'<b>$&</b>'));
-		});
+		highlight_search_terms(q);
 		update_stripes();
 	 },
 	});
+}
+function highlight_search_terms(q) {
+	var space_queries = q.split(" ");
+	highlight_regexes = [];
+	for (var j in space_queries) {
+		var q = space_queries[j];
+		if (q != "") {
+			highlight_regexes.push(new RegExp(q, "gi"));
+
+			var dash_queries = q.split("-");
+			if (dash_queries.length > 1) {
+				for (var k in dash_queries) {
+					if (dash_queries[k] != "") {
+						highlight_regexes.push(new RegExp(dash_queries[k], "gi"));
+					}
+				}
+			}
+		}
+	}
+	$(".highlightable").each(function(){
+		var text = $(this).text();
+		for (var j in highlight_regexes) {
+			text = text.replace(highlight_regexes[j], '<b>$&</b>')
+		}
+		$(this).html(text);
+	});
+
 }
 function update_stripes() {
 	$(".result_row:even").addClass("even");
