--- a/media/css/main.css
+++ b/media/css/main.css
@@ -235,6 +235,7 @@ a:hover {
 input {
 	font-size: 20px;
 	padding: 6px;
+	font-family: 'ExpresswayRegular', Arial, sans-serif;
 }
 /*input, textarea {outline-style:none;}*/
 #id_email {
@@ -307,11 +308,11 @@ input {
 	-webkit-text-shadow: 1px 1px 1px #06381C;
 	height: 70px;
 	
-/*	padding-left: 90px;*/
-/*	background: url("../images/goodcloud-logo-40.png");*/
+	padding-left: 90px;
+	background: url("../images/goodcloud-logo-40.png");
 
-	padding-left: 60px;
-	background: url("../images/goodcloud-logo2-40.png");	
+/*	padding-left: 60px;*/
+/*	background: url("../images/goodcloud-logo2-40.png");	*/
 	background-position: 5px 5px;
 	background-repeat: no-repeat;
 }
