look and feel tweaks, added last saved and all people btns, but pulled them.

--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -16,3 +16,12 @@
 	background-color: #004390;
 	color: #FFF;	
 }
+
+.myelium_gray {
+	background-color: #EEE;
+	color: #999;
+}
+.myelium_gray:hover {
+	background-color: #DDD;
+	color: #454545;
+}
