--- a/mycelium/apps/hi/templates/hi/hi.html
+++ b/mycelium/apps/hi/templates/hi/hi.html
@@ -51,7 +51,7 @@ function fade_in_question(){
 	<p>We make great software <br/>
 	exclusively for non-profits.</p>
 
-	<div class="more_info">We're in active development on our first product. You can find out more at <a href="{% url blog_home %}">Our Blog</a>, or by signing up to be notified below. Thanks for stopping by!</div>
+	<div class="more_info">We're in active development on our first product, collaborating with a handful of amazing non-profits. You can find out more at <a href="{% url blog_home %}">Our Blog</a>, or by signing up to be notified below. Thanks for stopping by!</div>
 	{% if posted and save_success %}
 		<div class="thanks_message">Thanks! We'll let you know as soon as it's ready!</div>
 	{% else %}
