--- a/media/css/people.css
+++ b/media/css/people.css
@@ -6,6 +6,10 @@ input {
 	padding: 0px;
 	margin: 0px;
 }
+input:focus {
+	outline-style:none;
+	border: 1px solid #3E9CFD;
+}
 #id_search_query {
 	width: 72%;
 	margin: 6px 0px;
